syntax = "proto3";

package identity;

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/nikitadev-work/SyncBuyProject/services/identity/proto-codegen;identitypb";

service IdentityService {
  rpc RegisterOrGetTelegramUser(RegisterOrGetTelegramUserRequest) returns (RegisterOrGetTelegramUserResponse) {}
  rpc GetUserByTelegramId(GetUserByTelegramIdRequest) returns (GetUserByTelegramIdResponse) {}
  rpc GetUserByUserId(GetUserByUserIdRequest) returns (GetUserByUserIdResponse) {}
  rpc Health(HealthRequest) returns (HealthResponse) {}
}

message RegisterOrGetTelegramUserRequest {
  string telegram_id = 1;
  string first_name = 2;
  string last_name = 3;
  string chat_id = 4;
  google.protobuf.Struct meta = 5;
}

message RegisterOrGetTelegramUserResponse {
  string user_id = 1;
}

message GetUserByTelegramIdRequest {
  string telegram_id = 1;
}

message GetUserByTelegramIdResponse {
  Profile profile = 1;
}

message GetUserByUserIdRequest {
  string user_id = 1;
}

message GetUserByUserIdResponse {
  Profile profile = 1;
}

message HealthRequest {
  google.protobuf.Empty empty = 1;
}

message HealthResponse {
  string status = 1;
}

message Profile {
  string user_id = 1;
  string first_name = 2;
  string last_name = 3;
}
